[package]
name = "kodict"
description = "Provides Korean Dictionary Implements and Crawler for Rust"
version = "0.1.0"
authors = ["Seungjae Park <astr36@naver.com>"]
documentation = "https://docs.rs/kodict"
repository = "https://github.com/Astro36/Kodict"
readme = "https://github.com/Astro36/Kodict/README.md"
keywords = ["korean", "dictionary", "crawler" , "hangul"]
license = "MIT"

[dependencies]
lazy_static = "1.2.0"
regex = "1.0.6"
reqwest = "0.9.5"
